[김경덕 남상현] sidemenu.html, css, js파일 추가 noticeList.html에 sidemenu 적용 searchWord.css #fixed-bar #fixed-bar-wrap margin속성 제거

--- a/secondhand/src/main/webapp/css/searchWord.css
+++ b/secondhand/src/main/webapp/css/searchWord.css
@@ -90,7 +90,7 @@ button {
 /* line 35, /app/app/assets/stylesheets/home/header.scss */
 #fixed-bar #fixed-bar-wrap {
 	width: 980px;
-	margin: 0 auto;
+	/* margin: 0 auto; */ /* <----------sidemenu 추가하면서 지워야됨 */
 	padding: 17px 0;
 	position: relative;
 }
